--- a/config.toml
+++ b/config.toml
@@ -9,9 +9,9 @@ uuid = "0fbf4f81-2598-4b6a-a623-0ead4cb9efa8"
 path = "/vmess"
 
 [[inbound]]
-protocol = "trojan"
-path = "/trojan"
-password = "test"
+protocol = "bepass"
+path = "/bepass"
+uuid = "0fbf4f81-2598-4b6a-a623-0ead4cb9efa8"
 
 [outbound]
 addresses = ["relay1.bepass.org"]
